--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@
       margin: 0 auto;
   }
   
-  main {
+  section {
       height: auto;
       width: 580px;
       float: left;
@@ -59,5 +59,5 @@
   }
   
   aside ul {
-      margin: .5em;
+      margin: 1.5em;
   }
