--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,13 @@
       width: 580px;
       float: left;
   }
+
+  img {
+        height: 40%;
+        width: 40%;
+        float: left;
+        margin-right: 2em;
+    }
   
   aside {
       background: lightsteelblue;
@@ -58,6 +65,6 @@
       text-align: center;
   }
   
-  aside ul {
+  ul {
       margin: 1.5em;
   }
